--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "spiken",
+  "name": "spiken-backend",
   "version": "1.0.0",
   "description": "",
-  "workspaces": [
-    "backend"
-  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run start --workspaces"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC"
