--- a/db/package.json
+++ b/db/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "spiken",
+  "name": "spiken-db",
   "version": "1.0.0",
   "description": "",
-  "workspaces": [
-    "backend",
-    "db"
-  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run start --workspaces"
+    "start": "docker compose up"
   },
   "author": "",
   "license": "ISC"
