--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "tsc-watch --onSuccess \"node build/index.js\""
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.8.4",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.2.2"
+  }
 }
