Add base Telegraf project

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,14 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@types/node": "^20.8.4",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "telegraf": "^4.14.0"
   }
 }
