--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^20.8.4",
+    "prettier": "3.0.3",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   },
