--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^20.8.4",
+    "@types/pg": "^8.10.5",
     "prettier": "3.0.3",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
     "telegraf": "^4.14.0",
     "zod": "^3.22.4"
   }
