--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "csv-parse": "^5.5.5",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "telegraf": "^4.14.0",
