Move bank account info to env

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -6,3 +6,7 @@ PGHOST="localhost"
 PGUSER="spiken"
 PGPASSWORD="spiken"
 NODE_ENV="development"
+
+BANK_ACCOUNT_NUMMER="FI123"
+BANK_ACCOUNT_NAME="Org RF"
+BANK_ACCOUNT_REF="123"
