Move info message to env

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,3 +1,4 @@
+INFO_MESSAGE="Mooi"
 BOT_TOKEN=""
 CHAT_ID=""
 ADMIN_CHAT_ID=""
@@ -7,6 +8,6 @@ PGUSER="spiken"
 PGPASSWORD="spiken"
 NODE_ENV="development"
 
-BANK_ACCOUNT_NUMMER="FI123"
+BANK_ACCOUNT_NUMBER="FI123"
 BANK_ACCOUNT_NAME="Org RF"
 BANK_ACCOUNT_REF="123"
