Add container name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/universal
 {
-	"name": "STF Spiken dev container",
+	"name": "Spiken dev container",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
 	"features": {
@@ -34,6 +34,7 @@
 			"editor.formatOnSave": true
 		}
 	},
+	"runArgs": ["--name", "spiken-dev-container"],
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
